force-app/main/default/objects/ClientSurveyResults__c/ClientSurveyResults__c.object-meta.xml
<CustomObject>
    <label>Client Survey Result</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Survey Results Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Survey Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>