force-app/main/default/objects/ClientSurveyResults__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Survey Results</relationshipLabel>
    <relationshipName>Client_Survey_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>