force-app/main/default/objects/ClientSurveyResults__c/fields/CACMember__c.field-meta.xml
<CustomField>
    <fullName>CACMember__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CAC Member</label>
    <type>Checkbox</type>
</CustomField>