force-app/main/default/objects/ClientSurveyResults__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact/Consultant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Survey Results</relationshipLabel>
    <relationshipName>Client_Survey_Results</relationshipName>
    <type>Lookup</type>
</CustomField>