force-app/main/default/objects/ClientSurveyResults__c/fields/CVGAccount__c.field-meta.xml
<CustomField>
    <fullName>CVGAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CVG</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Aggregator_Type__c</field>
            <operation>equals</operation>
            <value>CVG</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Survey Results (CVG)</relationshipLabel>
    <relationshipName>Client_Survey_Results1</relationshipName>
    <type>Lookup</type>
</CustomField>