force-app/main/default/objects/ClientSurveyResults__c/fields/ECRS_Engagements__c.field-meta.xml
<CustomField>
    <fullName>ECRS_Engagements__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ECRS Engagements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>