force-app/main/default/objects/ClientSurveyResults__c/fields/ECRS_Type__c.field-meta.xml
<CustomField>
    <fullName>ECRS_Type__c</fullName>
    <label>ECRS Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engaged Formal ECRS Clients</fullName>
            </value>
            <value>
                <fullName>Engaged Non ECRS Clients</fullName>
            </value>
            <value>
                <fullName>Non ECRS Client</fullName>
            </value>
            <value>
                <fullName>Non Engaged Formal ECRS Clients</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>