force-app/main/default/objects/ClientSurveyResults__c/fields/Fully_Termed_Client__c.field-meta.xml
<CustomField>
    <fullName>Fully_Termed_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fully Termed Client</label>
    <type>Checkbox</type>
</CustomField>