force-app/main/default/objects/ClientSurveyResults__c/fields/LikelihoodtoRecommendScore__c.field-meta.xml
<CustomField>
    <fullName>LikelihoodtoRecommendScore__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UHC: Likelihood to Recommend Score</label>
    <length>50</length>
    <type>Text</type>
</CustomField>