force-app/main/default/objects/ClientSurveyResults__c/fields/NetPromoterScore__c.field-meta.xml
<CustomField>
    <fullName>NetPromoterScore__c</fullName>
    <label>Net Promoter Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>