force-app/main/default/objects/ClientSurveyResults__c/fields/NetPromoterType__c.field-meta.xml
<CustomField>
    <fullName>NetPromoterType__c</fullName>
    <label>UHC: Net Promoter Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Promoter</fullName>
            </value>
            <value>
                <fullName>Detractor</fullName>
            </value>
            <value>
                <fullName>Passive</fullName>
            </value>
            <value>
                <fullName>Don&apos;t Know</fullName>
                <label>Don&apos;t know</label>
            </value>
            <value>
                <fullName>No response</fullName>
            </value>
            <value>
                <fullName>Did not Complete Survey</fullName>
            </value>
            <value>
                <fullName>Late Survey Respondent</fullName>
            </value>
            <value>
                <fullName>Custom Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>