force-app/main/default/objects/ClientSurveyResults__c/fields/Overall_Satisfaction_with_SCE_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Satisfaction_with_SCE_Score__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Overall Satisfaction with SCE Score</label>
    <length>50</length>
    <type>Text</type>
</CustomField>