force-app/main/default/objects/ClientSurveyResults__c/fields/OverallSatisfactionScore__c.field-meta.xml
<CustomField>
    <fullName>OverallSatisfactionScore__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Overall Satisfaction Score</label>
    <length>50</length>
    <type>Text</type>
</CustomField>