force-app/main/default/objects/ClientSurveyResults__c/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Business line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>National Accounts</fullName>
            </value>
            <value>
                <fullName>Enterprise Strategic Accounts</fullName>
            </value>
            <value>
                <fullName>Complex Accounts</fullName>
            </value>
            <value>
                <fullName>Specialty (Empire &amp; RR) Business</fullName>
            </value>
            <value>
                <fullName>Private Exchange</fullName>
            </value>
            <value>
                <fullName>Specialty Benefits Only</fullName>
            </value>
            <value>
                <fullName>CVG</fullName>
            </value>
            <value>
                <fullName>National Accounts - East</fullName>
            </value>
            <value>
                <fullName>National Accounts - West</fullName>
            </value>
            <value>
                <fullName>Specialty Business (Empire &amp; RR)</fullName>
            </value>
            <value>
                <fullName>Surest Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>