force-app/main/default/objects/ClientSurveyResults__c/fields/Surest_Likelihood_to_Recommend_Score__c.field-meta.xml
<CustomField>
    <fullName>Surest_Likelihood_to_Recommend_Score__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surest: Likelihood to Recommend Score</label>
    <length>50</length>
    <type>Text</type>
</CustomField>