force-app/main/default/objects/ClientSurveyResults__c/fields/Surest_Net_Promoter_Type__c.field-meta.xml
<CustomField>
    <fullName>Surest_Net_Promoter_Type__c</fullName>
    <label>Surest: Net Promoter Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promoter</fullName>
            </value>
            <value>
                <fullName>Detractor</fullName>
            </value>
            <value>
                <fullName>Passive</fullName>
            </value>
            <value>
                <fullName>Don&apos;t know</fullName>
            </value>
            <value>
                <fullName>No response</fullName>
            </value>
            <value>
                <fullName>Did not Complete Survey</fullName>
            </value>
            <value>
                <fullName>Late Survey Respondent</fullName>
            </value>
            <value>
                <fullName>Custom Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>