force-app/main/default/objects/ClientSurveyResults__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Survey Results</fullName>
            </value>
            <value>
                <fullName>Contact Client Survey Results</fullName>
            </value>
            <value>
                <fullName>Consultant Survey Results</fullName>
            </value>
            <value>
                <fullName>Client Survey Results - Surest</fullName>
                <isActive>false</isActive>
                <label>Client Survey Results - Surest</label>
            </value>
            <value>
                <fullName>Client Survey Results - Traditional</fullName>
                <isActive>false</isActive>
                <label>Client Survey Results - Traditional</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>