force-app/main/default/objects/ClientSurveyResults__c/fields/VPCRRVP__c.field-meta.xml
<CustomField>
    <fullName>VPCRRVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VPCR/RVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Survey_Results1</relationshipName>
    <type>Lookup</type>
</CustomField>