force-app/main/default/objects/ClientSurveyResults__c/listViews/Debbie_s_List.listView-meta.xml
<ListView>
    <fullName>Debbie_s_List</fullName>
    <columns>Contact__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Year__c</columns>
    <columns>Type__c</columns>
    <columns>Subtype__c</columns>
    <columns>Overall_Satisfaction_with_SCE_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
        <value>Cooperating Railway Labor Organizations</value>
    </filters>
    <label>Debbie&apos;s List</label>
</ListView>