force-app/main/default/objects/ClientSurveyResults__c/listViews/Test_Michele_Account_Client_Survey_Valid.listView-meta.xml
<ListView>
    <fullName>Test_Michele_Account_Client_Survey_Valid</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Year__c</columns>
    <columns>Fully_Termed_Client__c</columns>
    <columns>Contact__c</columns>
    <columns>LikelihoodtoRecommendScore__c</columns>
    <columns>NetPromoterScore__c</columns>
    <columns>NetPromoterType__c</columns>
    <columns>OverallSatisfactionScore__c</columns>
    <columns>Overall_Satisfaction_with_SCE_Score__c</columns>
    <columns>VPCRRVP__c</columns>
    <columns>SCE__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2021,2022</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
        <value>NCR Corporation</value>
    </filters>
    <label>Test Michele Account Client Survey Valid</label>
    <sharedTo>
        <role>CRMAdministrator</role>
    </sharedTo>
</ListView>